--- a/Source/Pages/UserLogin.html
+++ b/Source/Pages/UserLogin.html
@@ -7,17 +7,19 @@
 <body>
 		<h3>User Login</h3>
 
-		<div>
-			<label>Username:</label>
-			<input id="inputUsername"></input>
-		</div>
+		<form action="UserLoginExecute.html">
+			<div>
+				<label>Username:</label>
+				<input id="inputUsername"></input>
+			</div>
 
-		<div>
-			<label>Password:</label>
-			<input id="inputPassword" type="password"></input>
-		</div>
+			<div>
+				<label>Password:</label>
+				<input id="inputPassword" type="password"></input>
+			</div>
 
-		<button type="submit">Log In</button>
+			<button type="submit">Log In</button>
+		</form>
 </body>
 
 </html>
