--- a/Source/Pages/UserLogin.html
+++ b/Source/Pages/UserLogin.html
@@ -7,7 +7,7 @@
 <body>
 		<h3>User Login</h3>
 
-		<form action="UserLoginExecute.html">
+		<form method="POST" action="UserLoginExecute.html">
 			<div>
 				<label>Username:</label>
 				<input id="inputUsername"></input>
