Reading POST variables and substituting them into page templates.

--- a/Source/Pages/UserLoginExecute.html
+++ b/Source/Pages/UserLoginExecute.html
@@ -6,7 +6,7 @@
 
 <body>
 	<p>
-		You shouldn't be seeing this; you should be automatically forwarded.
+		Username is {{username}}, password is {{password}}.
 	</p>
 </body>
 
