--- a/Source/Pages/UserLogin.html
+++ b/Source/Pages/UserLogin.html
@@ -7,15 +7,15 @@
 <body>
 		<h3>User Login</h3>
 
-		<form action="UserLoginExecute.html">
+		<form method="POST" action="UserLoginExecute.html">
 			<div>
 				<label>Username:</label>
-				<input id="inputUsername"></input>
+				<input name="username" type="text"></input>
 			</div>
 
 			<div>
 				<label>Password:</label>
-				<input id="inputPassword" type="password"></input>
+				<input name="password" type="password"></input>
 			</div>
 
 			<button type="submit">Log In</button>
